[gd_scene load_steps=12 format=3 uid="uid://cijcd7g4gysgy"]

[ext_resource type="Texture2D" uid="uid://dqqnn7i56s403" path="res://Assets/UI/skills/Upgrade_Player.png" id="1_bjlnp"]
[ext_resource type="Script" path="res://Scenes/Util/upgrade_pickup.gd" id="1_o3bj8"]
[ext_resource type="Texture2D" uid="uid://cj3tbu1i5dl4" path="res://Assets/UI/skills/upgrade_shadow v2 x1.png" id="3_hbt37"]
[ext_resource type="AudioStream" uid="uid://c1il1vqi0k4dq" path="res://Assets/Sounds/pickup.wav" id="4_1qgmv"]
[ext_resource type="PackedScene" uid="uid://iupvlykgxm6r" path="res://Scenes/Util/on_screen_notifier_component.tscn" id="5_1hna5"]

[sub_resource type="Animation" id="Animation_n42go"]
resource_name = "Basic"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpgradeTypeSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, -2), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_o7krn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UpgradeTypeSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}

[sub_resource type="Animation" id="Animation_ayrqb"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Basic", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UpgradeTypeSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OnScreenNotifierComponent:should_be_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7itck"]
_data = {
"Basic": SubResource("Animation_n42go"),
"RESET": SubResource("Animation_o7krn"),
"Spawn": SubResource("Animation_ayrqb")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yod54"]
radius = 2.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2syq3"]
radius = 20.0

[node name="UpgradePickup" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_o3bj8")

[node name="UpgradeTypeSprite" type="Sprite2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_bjlnp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7itck")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_hbt37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yod54")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_2syq3")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1qgmv")
bus = &"Sounds"

[node name="OnScreenNotifierComponent" parent="." instance=ExtResource("5_1hna5")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
